force-app/main/default/objects/SFDC_Request__c/fields/request_status__c.field-meta.xml
<CustomField>
    <fullName>request_status__c</fullName>
    <label>Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0. Not Started</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
                <label>0. Not Started</label>
            </value>
            <value>
                <fullName>1. In Progress</fullName>
                <color>#E27001</color>
                <label>1. In Progress</label>
            </value>
            <value>
                <fullName>2. Testing</fullName>
                <color>#33CC00</color>
                <label>2. Testing</label>
            </value>
            <value>
                <fullName>3. Shelf Ready</fullName>
                <color>#9999FF</color>
                <label>3. Shelf Ready</label>
            </value>
            <value>
                <fullName>7. Completed</fullName>
                <color>#F3D904</color>
                <label>7. Completed</label>
            </value>
            <value>
                <fullName>8. On Hold</fullName>
                <color>#A845DC</color>
                <label>8. On Hold</label>
            </value>
            <value>
                <fullName>9. Cancelled</fullName>
                <color>#000000</color>
                <label>9. Cancelled</label>
            </value>
            <value>
                <fullName>Needs Review</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>