force-app/main/default/objects/SFDC_Request__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Business contact who originated the request.</description>
    <inlineHelpText>Business contact who originated the request.</inlineHelpText>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requests6</relationshipName>
    <type>Lookup</type>
</CustomField>