force-app/main/default/objects/SFDC_Request__c/fields/Requested_By_Email__c.field-meta.xml
<CustomField>
    <fullName>Requested_By_Email__c</fullName>
    <label>Requested By Email</label>
    <type>Email</type>
</CustomField>