force-app/main/default/objects/SFDC_Request__c/fields/Requested_By_User__c.field-meta.xml
<CustomField>
    <fullName>Requested_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>