force-app/main/default/objects/SFDC_Request__c/fields/Requirements_Gathered__c.field-meta.xml
<CustomField>
    <fullName>Requirements_Gathered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requirements Gathered?</label>
    <type>Checkbox</type>
</CustomField>