force-app/main/default/objects/SFDC_Request__c/fields/send_request_summary_to_owner__c.field-meta.xml
<CustomField>
    <fullName>send_request_summary_to_owner__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box &amp; save the record if you would like to send the Request details to the owner.  Used to easily email the summary to anyone who needs a project overview.  A summary is automatically emailed to the owner when the req is created.</inlineHelpText>
    <label>Send Request Summary to Owner</label>
    <type>Checkbox</type>
</CustomField>