force-app/main/default/objects/SFDC_Request__c/fields/Send_to_SD__c.field-meta.xml
<CustomField>
    <fullName>Send_to_SD__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the test is time-sensitive, please check this box and it will create a Service Desk case that IT will handle immediately.  The person entering this request is required to close the request, once complete.</inlineHelpText>
    <label>Send to SD+</label>
    <type>Checkbox</type>
</CustomField>