force-app/main/default/objects/SFDC_Request__c/fields/Senior_Leadership_Sponsor_Email__c.field-meta.xml
<CustomField>
    <fullName>Senior_Leadership_Sponsor_Email__c</fullName>
    <label>Senior Leadership Sponsor Email</label>
    <type>Email</type>
</CustomField>