force-app/main/default/objects/SFDC_Request__c/fields/SFDC_Project__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Issues are details of the master project record</description>
    <inlineHelpText>The project for all requests should be 0001 - Salesforce.</inlineHelpText>
    <label>Project</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>SFDC_Project__c.SFDC_Project_Name__c</field>
            <operation>equals</operation>
            <value>0001 - Salesforce</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SFDC_Project__c</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>R00N700000024dAgEAI</relationshipName>
    <type>Lookup</type>
</CustomField>