force-app/main/default/objects/SFDC_Request__c/fields/Significant__c.field-meta.xml
<CustomField>
    <fullName>Significant__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used to denote if a Request represents a significant project that includes a lot of important functionality.</inlineHelpText>
    <label>Significant</label>
    <type>Checkbox</type>
</CustomField>