force-app/main/default/objects/SFDC_Request__c/fields/Status_Details__c.field-meta.xml
<CustomField>
    <fullName>Status_Details__c</fullName>
    <inlineHelpText>Move the previous status notes to the &quot;Historical Status&quot; field and add information pertaining to this week&apos;s update in this field.</inlineHelpText>
    <label>Current Status Details</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>