force-app/main/default/objects/SFDC_Request__c/fields/System_Integration__c.field-meta.xml
<CustomField>
    <fullName>System_Integration__c</fullName>
    <label>System Integration</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>