force-app/main/default/objects/SFDC_Request__c/fields/Target_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Complete_Date__c</fullName>
    <label>Target Complete Date</label>
    <type>Date</type>
</CustomField>