force-app/main/default/objects/SFDC_Request__c/fields/Tech_Specs__c.field-meta.xml
<CustomField>
    <fullName>Tech_Specs__c</fullName>
    <description>Include a list of all changes that will move into production. Break it out by what will be included in the Change Set and what needs to be done manually. Break out manual changes into Pre-Deployment and Post-Deployment steps (fill out specific field).</description>
    <inlineHelpText>Include a list of all changes that will move into production. Break it out by what will be included in the Change Set and what needs to be done manually. Break out manual changes into Pre-Deployment and Post-Deployment steps (fill out specific field).</inlineHelpText>
    <label>Deployment Items</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>