force-app/main/default/objects/SFDC_Request__c/fields/Tester__c.field-meta.xml
<CustomField>
    <fullName>Tester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person who is responsible for testing</description>
    <inlineHelpText>Person who is responsible for testing</inlineHelpText>
    <label>Tester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requests5</relationshipName>
    <type>Lookup</type>
</CustomField>