force-app/main/default/objects/SFDC_Request__c/fields/Testing_Complete__c.field-meta.xml
<CustomField>
    <fullName>Testing_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Testing Complete?</label>
    <type>Checkbox</type>
</CustomField>