force-app/main/default/objects/SFDC_Request__c/fields/Total_Hrs_Over_Under__c.field-meta.xml
<CustomField>
    <fullName>Total_Hrs_Over_Under__c</fullName>
    <label>Total Hrs Over/Under</label>
    <summarizedField>Workstream__c.Actual_Estimated__c</summarizedField>
    <summaryForeignKey>Workstream__c.Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>