force-app/main/default/objects/SFDC_Request__c/fields/Training_Documentation_Complete__c.field-meta.xml
<CustomField>
    <fullName>Training_Documentation_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Training Documentation Complete?</label>
    <type>Checkbox</type>
</CustomField>