force-app/main/default/objects/SFDC_Request__c/fields/Users_Affected__c.field-meta.xml
<CustomField>
    <fullName>Users_Affected__c</fullName>
    <label>Users Affected</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3PL</fullName>
            </value>
            <value>
                <fullName>All Users</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>CS</fullName>
            </value>
            <value>
                <fullName>eBusiness</fullName>
            </value>
            <value>
                <fullName>Execs</fullName>
            </value>
            <value>
                <fullName>Field Sales</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Individual User</fullName>
            </value>
            <value>
                <fullName>Inside Sales</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Merchandisers</fullName>
            </value>
            <value>
                <fullName>National Accounts</fullName>
            </value>
            <value>
                <fullName>New User Group</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Sales Managers</fullName>
            </value>
            <value>
                <fullName>Segment - FS</fullName>
            </value>
            <value>
                <fullName>Segment - Paper</fullName>
            </value>
            <value>
                <fullName>Segment - PKG</fullName>
            </value>
            <value>
                <fullName>Segment - Publishing</fullName>
            </value>
            <value>
                <fullName>SF Administrators</fullName>
            </value>
            <value>
                <fullName>Sourcing</fullName>
            </value>
            <value>
                <fullName>Specialists</fullName>
            </value>
            <value>
                <fullName>Spec Reps</fullName>
            </value>
            <value>
                <fullName>Strategy</fullName>
            </value>
            <value>
                <fullName>Supply Chain</fullName>
            </value>
            <value>
                <fullName>TSB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>