force-app/main/default/objects/SFDC_Request__c/fields/Value_Retain_Customers__c.field-meta.xml
<CustomField>
    <fullName>Value_Retain_Customers__c</fullName>
    <inlineHelpText>Value must be between 0-3.  0 is low, 3 is high.</inlineHelpText>
    <label>Value: Retain Customers</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>