force-app/main/default/objects/SFDC_Request__c/fields/Value_total__c.field-meta.xml
<CustomField>
    <fullName>Value_total__c</fullName>
    <formula>Value_Clean_Data__c +  Value_Cost_Savings__c +  Value_Grow_Sales__c +  Value_Retain_Customers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of Value fields (Clean Data, Grow Sales, Retain Customers, Cost Savings)</inlineHelpText>
    <label>Value: Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>