force-app/main/default/objects/SFDC_Request__c/fields/Veritiv_Request__c.field-meta.xml
<CustomField>
    <fullName>Veritiv_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Veritiv Request</label>
    <type>Checkbox</type>
</CustomField>