force-app/main/default/objects/SFDC_Request__c/recordTypes/Salesforce_Project_Request.recordType-meta.xml
<RecordType>
    <fullName>Salesforce_Project_Request</fullName>
    <active>true</active>
    <description>Requests for Salesforce Projects</description>
    <label>Salesforce Project Request</label>
</RecordType>