force-app/main/default/objects/SFDC_Request__c/validationRules/Canceled_Rejected_Reason_Reqd.validationRule-meta.xml
<ValidationRule>
    <fullName>Canceled_Rejected_Reason_Reqd</fullName>
    <active>true</active>
    <description>Requires input in the &apos;Canceled/Rejected Reason&apos; field when values are selected in the &apos;Request Status&apos; field</description>
    <errorConditionFormula>AND(
  OR(
     ISPICKVAL(request_status__c, &apos;Canceled&apos;),
     ISPICKVAL(request_status__c, &apos;Rejected&apos;)
  ),
    ISBLANK(Canceled_Rejected_Reason__c)
)</errorConditionFormula>
    <errorDisplayField>Canceled_Rejected_Reason__c</errorDisplayField>
    <errorMessage>Please provide a reason why the request was canceled or rejected</errorMessage>
</ValidationRule>