force-app/main/default/objects/SFDC_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SFDC_Project__c</columns>
    <columns>NAME</columns>
    <columns>request_status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>date_end__c</columns>
    <columns>date_release__c</columns>
    <columns>date_start__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Requested_By__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>