force-app/main/default/objects/SFDC_Request__c/listViews/All_Approved_Requests.listView-meta.xml
<ListView>
    <fullName>All_Approved_Requests</fullName>
    <columns>CREATED_DATE</columns>
    <columns>SFDC_Project__c</columns>
    <columns>Project_Name__c</columns>
    <columns>NAME</columns>
    <columns>request_status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>request_status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>iss -</value>
    </filters>
    <label>All Approved Requests</label>
</ListView>