force-app/main/default/objects/SFDC_Request__c/listViews/All_Salesforce_Project_Requests.listView-meta.xml
<ListView>
    <fullName>All_Salesforce_Project_Requests</fullName>
    <columns>Request_Number__c</columns>
    <columns>NAME</columns>
    <columns>request_status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Target_Complete_Date__c</columns>
    <columns>Requested_By_Email__c</columns>
    <columns>Primary_Project_Contact_Email__c</columns>
    <columns>Senior_Leadership_Sponsor_Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SFDC_Request__c.Salesforce_Project_Request</value>
    </filters>
    <filters>
        <field>request_status__c</field>
        <operation>equals</operation>
        <value>Needs Review,On Hold,Approved,Duplicate,Canceled</value>
    </filters>
    <label>All Salesforce Project Requests</label>
    <sharedTo>
        <group>All_Admins</group>
    </sharedTo>
</ListView>