force-app/main/default/objects/SFDC_Request__c/listViews/Assigned_Bluewolf.listView-meta.xml
<ListView>
    <fullName>Assigned_Bluewolf</fullName>
    <columns>NAME</columns>
    <columns>request_status__c</columns>
    <columns>Planned_Deployment_Date__c</columns>
    <columns>Historical_Status_Notes__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Dev_Testing_Environment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BW__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Assigned - Bluewolf</label>
</ListView>