force-app/main/default/objects/SFDC_Request__c/listViews/Assigned_Josh.listView-meta.xml
<ListView>
    <fullName>Assigned_Josh</fullName>
    <columns>SFDC_Project__c</columns>
    <columns>NAME</columns>
    <columns>request_status__c</columns>
    <columns>Planned_Deployment_Date__c</columns>
    <columns>date_start__c</columns>
    <columns>Requested_By_User__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>request_owner_user__c</field>
        <operation>contains</operation>
        <value>Reigner</value>
    </filters>
    <filters>
        <field>request_status__c</field>
        <operation>notEqual</operation>
        <value>7. Completed,8. On Hold,9. Cancelled</value>
    </filters>
    <label>Assigned - Josh</label>
    <language>en_US</language>
</ListView>