force-app/main/default/objects/SFDC_Request__c/listViews/Assigned_Sujitha.listView-meta.xml
<ListView>
    <fullName>Assigned_Sujitha</fullName>
    <columns>NAME</columns>
    <columns>request_status__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Planned_Deployment_Date__c</columns>
    <columns>Historical_Status_Notes__c</columns>
    <columns>date_start__c</columns>
    <columns>Requested_By_User__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>Release__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>request_status__c</field>
        <operation>equals</operation>
        <value>0. Not Started,1. In Progress,2. Testing,3. Shelf Ready</value>
    </filters>
    <filters>
        <field>request_owner_user__c</field>
        <operation>contains</operation>
        <value>Damidi</value>
    </filters>
    <label>Assigned - Sujitha</label>
</ListView>