force-app/main/default/objects/SFDC_Request__c/listViews/Backlog_Groomed.listView-meta.xml
<ListView>
    <fullName>Backlog_Groomed</fullName>
    <columns>NAME</columns>
    <columns>Request_Number__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Requested_By_User__c</columns>
    <columns>request_owner_user__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>SFDC_Project__c</columns>
    <columns>Project_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Groomed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>request_status__c</field>
        <operation>equals</operation>
        <value>0. Not Started</value>
    </filters>
    <label>1. Backlog - Groomed</label>
    <language>en_US</language>
</ListView>