force-app/main/default/objects/SFDC_Request__c/listViews/Created_Today.listView-meta.xml
<ListView>
    <fullName>Created_Today</fullName>
    <columns>NAME</columns>
    <columns>Requested_By_User__c</columns>
    <columns>request_owner_user__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>X - Created Today</label>
    <language>en_US</language>
</ListView>