force-app/main/default/objects/SFDC_Request__c/listViews/CS_Operations_Requests.listView-meta.xml
<ListView>
    <fullName>CS_Operations_Requests</fullName>
    <booleanFilter>(1 OR 2) AND 3</booleanFilter>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Historical_Status_Notes__c</columns>
    <columns>Groomed__c</columns>
    <columns>Request_Type__c</columns>
    <columns>request_status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Planned_Start_Date__c</columns>
    <columns>date_start__c</columns>
    <columns>Planned_Deployment_Date__c</columns>
    <columns>date_release__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Requested_By_User__c</field>
        <operation>contains</operation>
        <value>CUMPSON,HICKEY</value>
    </filters>
    <filters>
        <field>Requested_By__c</field>
        <operation>contains</operation>
        <value>CUMPSON,HICKEY</value>
    </filters>
    <filters>
        <field>request_status__c</field>
        <operation>notEqual</operation>
        <value>7. Completed,9. Cancelled</value>
    </filters>
    <label>CS Operations Requests</label>
    <language>en_US</language>
</ListView>