force-app/main/default/objects/SFDC_Request__c/listViews/Deferred.listView-meta.xml
<ListView>
    <fullName>Deferred</fullName>
    <columns>NAME</columns>
    <columns>request_priority__c</columns>
    <columns>request_status__c</columns>
    <columns>Significant__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>request_owner_user__c</columns>
    <columns>Requested_By_User__c</columns>
    <columns>Request_Scale__c</columns>
    <columns>date_end__c</columns>
    <columns>date_start__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>request_status__c</field>
        <operation>equals</operation>
        <value>5. Deferred</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>iss -</value>
    </filters>
    <label>X - 5. Deferred</label>
    <language>en_US</language>
</ListView>