force-app/main/default/objects/SFDC_Request__c/listViews/Deploment_Schedule_Next_30_days.listView-meta.xml
<ListView>
    <fullName>Deploment_Schedule_Next_30_days</fullName>
    <columns>Planned_Deployment_Date__c</columns>
    <columns>NAME</columns>
    <columns>Request_Type__c</columns>
    <columns>Requested_By_User__c</columns>
    <columns>request_owner_user__c</columns>
    <columns>Release__c</columns>
    <columns>request_status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Planned_Deployment_Date__c</field>
        <operation>equals</operation>
        <value>NEXT_N_DAYS:30</value>
    </filters>
    <filters>
        <field>request_status__c</field>
        <operation>notEqual</operation>
        <value>7. Completed,9. Cancelled,8. On Hold</value>
    </filters>
    <label>5. Deployment - Upcoming Next 30 days</label>
    <language>en_US</language>
</ListView>